--- a/public_html/snippet/header.html
+++ b/public_html/snippet/header.html
@@ -1,37 +1,20 @@
-<div>
-    <!-- not connected -->
-    <nav id="disconnected" class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img id="brand" alt="Brand" src="./img/plant_icons.png">
-                </a>
-
-            </div>
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#/home">
+                <img id="brand" alt="Brand" src="./img/plant_icons.png">
+            </a>
         </div>
-    </nav>
-
-    <!-- connected -->
-    <nav id="connected" class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <img id="brand" alt="Brand" src="./img/plant_icons.png">
-                </a>
-            </div>
-            <div class="collapse navbar-collapse connected" id="header-connected">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-grain"></i> Germination <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#"><i class="glyphicon glyphicon-plus"></i> Nouvelle germination</a></li>
-                            <li><a href="#"><i class="glyphicon glyphicon-tint"></i> Germination en cours</a></li>
-                            <li><a href="#"><i class="glyphicon glyphicon-list-alt"></i> Historique</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#"><i class="glyphicon glyphicon-user"></i> Profil</a></li>
-                </ul>
-            </div>
+        <div ng-show="headerCtrl.isConnected()">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="#/germination/new"><i class="glyphicon glyphicon-plus"></i> Nouvelle germination</a></li>
+                <li><a href="#/germination/current"><i class="glyphicon glyphicon-tint"></i> Germination en cours</a></li>
+                <li><a href="#/germination/history"><i class="glyphicon glyphicon-list-alt"></i> Historique</a></li>
+                <li><a href="#/infos"><i class="glyphicon glyphicon-grain"></i> Graines & Infos</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/profile"><i class="glyphicon glyphicon-user"></i> Profil</a></li>
+            </ul>
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
