--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,6 +21,7 @@ and open the template in the editor.
             <!-- angular -->
             <script src="js/libs/angular/angular.min.js" type="text/javascript"></script>
             <script src="js/libs/angular/angular-route.min.js" type="text/javascript"></script>
+            <script src="js/libs/angular/angular-resource.min.js" type="text/javascript"></script>
            <!-- underscore -->
             <script src="js/libs/underscore.js/underscore.js" type="text/javascript"></script>
             <!-- jquery -->
@@ -30,7 +31,9 @@ and open the template in the editor.
             <!-- GrowBox -->
             <script src="js/growbox.js" type="text/javascript"></script>
             <script src="js/route.js" type="text/javascript"></script>
-            <script src="js/headerDirective.js" type="text/javascript"></script>
+            <script src="js/directives.js" type="text/javascript"></script>
+            <script src="js/controllers.js" type="text/javascript"></script>
+            <script src="js/services.js" type="text/javascript"></script>
         <!-- /JS -->
     </head>
     <body>
