--- a/public_html/snippet/header.html
+++ b/public_html/snippet/header.html
@@ -5,16 +5,23 @@
                 <img id="brand" alt="Brand" src="./img/plant_icons.png">
             </a>
         </div>
-        <div ng-show="headerCtrl.isConnected()">
+        <div>
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="#/germination/new"><i class="glyphicon glyphicon-plus"></i> Nouvelle germination</a></li>
-                <li><a href="#/germination/current"><i class="glyphicon glyphicon-tint"></i> Germination en cours</a></li>
-                <li><a href="#/germination/history"><i class="glyphicon glyphicon-list-alt"></i> Historique</a></li>
+                <li ng-show="isConnected()"><a href="#/germination/new"><i class="glyphicon glyphicon-plus"></i> Nouvelle germination</a></li>
+                <li ng-show="isConnected()"><a href="#/germination/current"><i class="glyphicon glyphicon-tint"></i> Germination en cours</a></li>
+                <li ng-show="isConnected()"><a href="#/germination/history"><i class="glyphicon glyphicon-list-alt"></i> Historique</a></li>
                 <li><a href="#/infos"><i class="glyphicon glyphicon-grain"></i> Graines & Infos</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" ng-show="isConnected()">
+                <li><a href="#/" ng-click="logout()"><i class="glyphicon glyphicon-off"></i> Déconnexion</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right" ng-show="isConnected()">
                 <li><a href="#/profile"><i class="glyphicon glyphicon-user"></i> Profil</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right" ng-hide="isConnected()">
+                <li><a href="#/login"><i class="glyphicon glyphicon-user"></i> Connexion</a></li>
+            </ul>
+            
         </div>
     </div>
 </nav>
