added germination infos on seeds. added mesure filter.

--- a/public_html/snippet/home.html
+++ b/public_html/snippet/home.html
@@ -1,5 +1,5 @@
 <div ng-class="{'col-md-12': !isConnected(), 'col-md-10': isConnected()}" class="text-center">
-    <h2>Growbox</h2>
+    <h2>Boîte à pousses !</h2>
     <p>
         {{message}}
     </p>
