--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,6 +34,7 @@ and open the template in the editor.
             <script src="js/directives.js" type="text/javascript"></script>
             <script src="js/controllers.js" type="text/javascript"></script>
             <script src="js/services.js" type="text/javascript"></script>
+            <script src="js/filters.js" type="text/javascript"></script>
         <!-- /JS -->
     </head>
     <body>
