began current germination meteocons

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,7 @@ and open the template in the editor.
             <link href="js/libs/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
             <!-- GrowBox -->
             <link href="css/growbox.css" rel="stylesheet" type="text/css"/>
+            <link href="css/meteocons.css" rel="stylesheet" type="text/css"/>
         <!-- /CSS -->
         
         <!-- JS -->
