--- a/public_html/snippet/current-germination.html
+++ b/public_html/snippet/current-germination.html
@@ -11,7 +11,7 @@
                     <div class="col-md-4 col-md-offset-4">
                         <div class="btn-group btn-group-justified">
                             <a class="btn btn-success"><i class="glyphicon glyphicon-play"></i></a>
-                            <a class="btn btn-danger"><i class="glyphicon glyphicon-pause"></i></a>
+                            <a class="btn btn-danger"><i class="glyphicon glyphicon-stop"></i></a>
                         </div>
                     </div>
                 </div>
@@ -19,15 +19,16 @@
                     <label for="pin9" class="col-md-3 control-label">
                         <span class="label label-default ">Température</span>
                     </label>
-                    <div class="col-md-6">
+                    <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <input ng-model="pin9" type="text" ng-pattern="/\d/" class="form-control"/>
+                                    <span class="input-group-addon"><i class="icon icon-temperature"></i></span>
+                                    <input ng-model="pin9" type="text" class="form-control text-right"/>
                                     <span class="input-group-addon">C&deg;</span>
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-6">
                                 <div class="input-group">
                                     <span class="input-group-btn"><button class="btn btn-minus" ng-click="addTemperature(-1)"><i class="glyphicon glyphicon-minus-sign"></i></button></span>
                                     <input ng-model="pin9" type="range" class="form-control" id="pin9">
@@ -41,15 +42,16 @@
                     <label for="pin3" class="col-md-3 control-label">
                         <span class="label label-default">Luminosité</span>
                     </label>
-                    <div class="col-md-6">
+                    <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <input ng-model="pin3" type="text" class="form-control"/>
+                                    <span class="input-group-addon"><i class="icon icon-sun"></i></span>
+                                    <input ng-model="pin3" type="text" class="form-control text-right"/>
                                     <span class="input-group-addon">%</span>
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-6">
                                 <div class="input-group">
                                     <span class="input-group-btn"><button class="btn btn-minus" ng-click="addBrightness(-1)"><i class="glyphicon glyphicon-minus-sign"></i></button></span>
                                     <input ng-model="pin3" type="range" class="form-control" id="pin3">
@@ -63,15 +65,16 @@
                     <label for="pin5" class="col-md-3 control-label">
                         <span class="label label-default">Ventilation</span>
                     </label>
-                    <div class="col-md-6">
+                    <div class="col-md-9">
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <input ng-model="pin5" type="text" class="form-control"/>
+                                    <span class="input-group-addon"><i class="icon icon-wind"></i></span>
+                                    <input ng-model="pin5" type="text" class="form-control text-right"/>
                                     <span class="input-group-addon">%</span>
                                 </div>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-6">
                                 <div class="input-group">
                                     <span class="input-group-btn"><button class="btn btn-minus" ng-click="addVentilation(-1)"><i class="glyphicon glyphicon-minus-sign"></i></button></span>
                                     <input ng-model="pin5" type="range" class="form-control" id="pin5">
