--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,7 +24,7 @@ and open the template in the editor.
             <script src="js/libs/angular/angular-route.min.js" type="text/javascript"></script>
             <script src="js/libs/angular/angular-resource.min.js" type="text/javascript"></script>
            <!-- underscore -->
-            <script src="js/libs/underscore.js/underscore.js" type="text/javascript"></script>
+            <script src="js/libs/underscore.js/underscore-min.js" type="text/javascript"></script>
             <!-- jquery -->
             <script src="js/libs/jquery/jquery-1.11.2.min.js" type="text/javascript"></script>
             <!-- bootstrap -->
