--- a/public_html/snippet/header.html
+++ b/public_html/snippet/header.html
@@ -7,7 +7,7 @@
         </div>
         <div>
             <ul class="nav navbar-nav navbar-left">
-                <li ng-show="isConnected()"><a href="#/germination/new"><i class="glyphicon glyphicon-plus"></i> Nouvelle germination</a></li>
+<!--                <li ng-show="isConnected()"><a href="#/germination/new"><i class="glyphicon glyphicon-plus"></i> Nouvelle germination</a></li>-->
                 <li ng-show="isConnected()"><a href="#/germination/current"><i class="glyphicon glyphicon-tint"></i> Germination en cours</a></li>
                 <li><a href="#/infos"><i class="glyphicon glyphicon-grain"></i> Graines & Infos</a></li>
             </ul>
